--- a/frontend/src/app/events/events.component.css
+++ b/frontend/src/app/events/events.component.css
@@ -1,9 +1,13 @@
+ul{
+    display: flex;
+    gap: 10px;
+}
+
 .prod{
-    width: 250px;
-    
+    width: 200px;
+    height: 300px;
     height: auto;
     padding: 10px;
-    border: 1px solid #e8e8e8;
     display: flex;
     align-items: center;
     flex-wrap: wrap;
@@ -15,12 +19,25 @@
 
 img{
     width: 200px;
-    height: 250px;
+    height: 100px;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+a{
+    text-decoration: none;
+    transition: 200ms;
+    color: black;
+}
+
+a:hover{
+    color: red;
 }
 
 h3{
     display: flex;
     justify-content: center;
+
 }
 
 .but{
@@ -28,22 +45,29 @@ h3{
     justify-content: center;
 }
 
-.like{
-    display: flex;
-    justify-content: center;
-    padding: 10px;
+.item-info{
+    width: 200px;
 }
 
-.like a{
-    padding: 10px;
+.p{
+    width: 200px;
+    height: 100px;
 }
 
-
-.like img{
-    width: 50px;
-    height: 50px;
+p{
+    color: rgb(160, 160, 160);
+    font-size: 12px;
 }
 
+.h3{
+    width: 200px;
+    height: 100px;
+}
+
+.image{
+    width: 200px;
+    height: 100px;
+}
 
 
 /*
