--- a/frontend/src/app/events/events.component.html
+++ b/frontend/src/app/events/events.component.html
@@ -1,16 +1,22 @@
-<div *ngFor="let event of events;" class="prod">
-  <div class="image">
-    <img [src]="event.image">
-  </div>
-  <div class="item-info">
-    <h3>
-      <a [title]="event.title + ' details'" [routerLink]="['/events', event.id]">
-        {{ event.title }}
-      </a>
-    </h3>
-  
-    <p>
-      {{ event.start_datetime }} - {{ event.location }}
-    </p>
-  </div>
-</div>
+<ul>
+  <li *ngFor="let event of events;" class="prod">
+    <div class="image">
+      <img [src]="event.image">
+    </div>
+    <div class="item-info">
+      <div class="h3">
+      <h3>
+        <a [title]="event.title + ' details'" [routerLink]="['/events', event.id]">
+          {{ event.title }}
+        </a>
+      </h3>
+    </div>
+    <div class="p">
+      <p>
+        {{ event.start_datetime }} - {{ event.location }}
+      </p>
+    </div>
+      
+    </div>
+  </li>
+</ul>
