--- a/frontend/src/app/event-details/event-details.component.css
+++ b/frontend/src/app/event-details/event-details.component.css
@@ -13,7 +13,7 @@
 
 img{
     width: 1000px;
-    height: 500px;
+    height: 300px;
     object-fit: cover;
     border-radius: 10px;
 }
@@ -37,11 +37,48 @@ img{
 .tables{
     display: flex;
     align-items: center;
-    height: 50px;
+    justify-content: flex-start;
+    padding-left: 6%;
+    height: 30px;
 }
 
 .svg-icon{
     width: 10px;
     height: 10px;
     padding-right: 5%;
+}
+
+.left{
+    width: 710px;
+}
+
+.p{
+    width: 650px;
+}
+
+.btn {
+    background-color: #dc4242;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    border-radius: 10px;
+    font-size: 16px;
+  }
+
+.form{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+.form-group label{
+    margin-right: 10px;
+}
+
+.btn{
+    margin: 10px 0;
 }
