--- a/frontend/src/app/app-top/app-top.component.html
+++ b/frontend/src/app/app-top/app-top.component.html
@@ -1,7 +1,7 @@
 <div class="head">
     <div class="logo">
         <h3>
-            kettik.kz
+            <a [href]="['/']">kettik.kz</a>
         </h3>
     </div>
 </div>
